# devils-advocate-agent-native

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: conversation.01.md  findings.2026-04-23-session2.md  handoff.2026-04-23.md  plan.v1.md  plan.v2.md  plan.v3.md  roadmap.md  spec.v1.adversarial.gpt.minimax.md  spec.v1.adversarial.opus.kimi.md  spec.v1.md  spec.v2.adversarial.opus.glm.md  spec.v2.adversarial.opus.gpt.md  spec.v2.md  spec.v3.md
scripts/: verify_roles.py
skill/: dvad.md
src/dvad_agent/: __init__.py  __main__.py  budget.py  cli.py  config.py  cost.py  dedup.py  install.py  output.py  paths.py  prompts.py  providers.py  review.py  secrets.py  server.py  types.py
tests/: conftest.py  test_budget.py  test_config.py  test_cost.py  test_dedup.py  test_install.py  test_output.py  test_paths.py  test_providers.py  test_review.py  test_secrets.py
