[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dvad-agent-native"
version = "0.1.0"
description = "Agent-native adversarial review — multi-LLM review as an MCP server + Claude Code skill."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Brian Kelley" }]
keywords = ["mcp", "claude-code", "code-review", "adversarial", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "black>=24.0",
]

[project.scripts]
dvad-agent = "dvad_agent.cli:main"
dvad-agent-mcp = "dvad_agent.server:main"

[project.urls]
Homepage = "https://github.com/briankelley/dvad-agent-native"
Documentation = "https://github.com/briankelley/dvad-agent-native/blob/main/docs/spec.v3.md"
Issues = "https://github.com/briankelley/dvad-agent-native/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dvad_agent = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
